--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <h1>The Recipes</h1>
+    <header>
+        <h1>The Recipe</h1>
+    </header>
+    
         
 
     <script src="js/scripts.js"></script>
