Create and add event listener
create buttons in lists
add event listeners to buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1>The Recipe</h1>
     </header>
     
+    <ul class="recipe_list">
         
+    </ul>
 
     <script src="js/scripts.js"></script>
 </body>
