--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         
     </ul>
 
+    <script src="js/promise-polyfill.js"></script> <!--Optional(cause enlarge file size and performance) ----use promise-polfill to support Promises funtion in older browser-->
+    <script src="js/fetch-polyfill.js"></script> <!--Optional(cause enlarege)---use fetch-polfill to support fetch() funtion in older browser-->
     <script src="js/scripts.js"></script>
 </body>
 
