--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <h1>The Recipe</h1>
     </header>
     
-    <ul class="recipe_list">        
+    <ul class="recipe-list">        
     </ul>
+    <div id='modal-container'></div>
     
     <script src="js/promise-polyfill.js"></script> <!--Optional(cause enlarge file size and performance) ----use promise-polfill to support Promises funtion in older browser-->
     <script src="js/fetch-polyfill.js"></script> <!--Optional(cause enlarege)---use fetch-polfill to support fetch() funtion in older browser-->
