--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
     
         <a class="navbar-brand" href="#body">
-          <img src="img/image id-2395610-png.png" width="30" height="30" class="d-inline-block align-top" alt="">
+          <img src="img/design-1707586243214.png" width="60" height="60" class="d-inline-block align-top" alt="image of hot soup">
           Lian's Kitchen
         </a>
 
