--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Recipe</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="dist/stylemin.css" type="text/css">
 </head>
 
 <body>
@@ -86,8 +86,8 @@
 
    
     <!-----------------------Scripts------------------------>
-    <script src="js/promise-polyfill.js"></script> <!--Optional(cause enlarge file size and performance) ----use promise-polfill to support Promises funtion in older browser-->
-    <script src="js/fetch-polyfill.js"></script> <!--Optional(cause enlarege)---use fetch-polfill to support fetch() funtion in older browser-->
+    <script src="src/js/promise-polyfill.js"></script> <!--Optional(cause enlarge file size and performance) ----use promise-polfill to support Promises funtion in older browser-->
+    <script src="src/js/fetch-polyfill.js"></script> <!--Optional(cause enlarege)---use fetch-polfill to support fetch() funtion in older browser-->
     
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
@@ -103,7 +103,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-    <script src="js/scripts.js"></script>
+    <script src="dist/scriptmin.js"></script>
   
 </body>
 
