--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             </ul>
             <form class="form-inline ml-auto">
                 <span id="showNumberInNavbar" class="navbar-text">14 categories loaded</span>
-                <input class="form-control mr-sm-2" type="search" placeholder="Search by Name"
+                <input id="search" class="form-control mr-sm-2" type="search" placeholder="Search by Name"
                     aria-label="Search this page">
-                <button class="btn btn-outline-success my-2 my-sm-0 searchButton" type="submit">Search</button>
+                <!--<button class="btn btn-outline-success my-2 my-sm-0 searchButton" type="submit">Search</button>-->
             </form>
             
         </div>
